--- a/style.css
+++ b/style.css
@@ -91,6 +91,7 @@ section
     width: 30%;
     max-width: 30%;
     margin: 0 auto;
+    height:100%;
     display: block;
 }
 .div-main-text
@@ -342,7 +343,7 @@ h1
     color: #ddd;
 }
 /**/
-@media all and (max-width:960px) {
+@media all and (max-width:900px) {
     html {
         scroll-padding-top: 200px; /* height of sticky header */
     }
